testing mobile version

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="products-list">
            <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 product1">
                     <img src="assets/img/mala_firma.png">
                     <div class="product-info">
                         <p class="effit green">Effit Gdpr</p>
@@ -121,7 +121,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="col-md-4 product1">
+                <div class="col-md-4 product2">
                     <img src="assets/img/stredni_firma.png">
                     <div class="product-info">
                         <p class="effit blue">Effit Gdpr</p>
@@ -138,7 +138,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="col-md-4 product2">
+                <div class="col-md-4 product3">
                     <img src="assets/img/velka_firma.png">
                     <div class="product-info">
                         <p class="effit purple">Effit Gdpr</p>
@@ -233,9 +233,9 @@
                     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                       <div class="card-body">
                         <div class="images">
-                            <img src="assets/img/Functions/diz_1.png">
-                            <img src="assets/img/Functions/diz_2.png">
-                            <img src="assets/img/Functions/diz_3.png">
+                            <img class="img-fluid" src="assets/img/Functions/diz_1.png">
+                            <img class="img-fluid" src="assets/img/Functions/diz_2.png">
+                            <img class="img-fluid" src="assets/img/Functions/diz_3.png">
                         </div>
                       </div>
                     </div>
@@ -284,7 +284,7 @@
                     </button>  
                 </div>
                 <div class="col-md-6">
-                    <img src="assets/img/bp_foto.png">
+                    <img class="img-fluid" src="assets/img/bp_foto.png">
                 </div>
             </div>
         </div>
