fix functions section

--- a/index.html
+++ b/index.html
@@ -233,9 +233,17 @@
                     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                       <div class="card-body">
                         <div class="images">
-                            <img class="img-fluid" src="assets/img/Functions/diz_1.png">
-                            <img class="img-fluid" src="assets/img/Functions/diz_2.png">
-                            <img class="img-fluid" src="assets/img/Functions/diz_3.png">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_1.png">
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_2.png">  
+                                </div>
+                                <div class="col-md-4">
+                                    <img class="img-fluid" src="assets/img/Functions/diz_3.png">
+                                </div>
+                            </div>
                         </div>
                       </div>
                     </div>
