added css with circle in spectrum section

--- a/index.html
+++ b/index.html
@@ -202,8 +202,22 @@
         <div class="container">
             <h1>Široké spektrum uživatelů</h1>
             <div class="row">
-                <div class="col-md-6">
-                    
+                <div class="col-md-6 circles">
+                    <div class="main-circle">
+                        <span class="heading">Zdravotnictví</span>
+                        <br>
+                        <span>Lorem ipsum</span>
+                    </div>
+                    <div class="circle c1">
+                    </div>
+                    <div class="circle c2">
+                    </div>
+                    <div class="circle c3">
+                    </div>
+                    <div class="circle c4">
+                    </div>
+                    <div class="circle c5 active">
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <span class="heading">Systém primárně využijí</span>
