tablet optimalization 992px

--- a/index.html
+++ b/index.html
@@ -338,13 +338,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="assets/img/logo.png">
+                    <img class="img-fluid" src="assets/img/logo.png">
                 </div>
                 <div class="col-md-3">
-                    <img src="assets/img/logo_2.png">
+                    <img class="img-fluid" src="assets/img/logo_2.png">
                 </div>
                 <div class="col-md-3">
-                    <img src="assets/img/logo_3.png">
+                    <img class="img-fluid" src="assets/img/logo_3.png">
                 </div>
                 <div class="col-md-3 usefull">
                     <span class="heading">Užitečné odkazy</span>
