added gdrp page

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Sluzba Effit <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Sluzba Effit <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Co je GDPR</a>
+              <a class="nav-link" href="aboutgdpr.html">Co je GDPR</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">O nas</a>
+              <a class="nav-link" href="aboutus.html">O nas</a>
             </li>
           </ul>
           <ul class="navbar-nav">
