added responsiviti for gdrp page

--- a/aboutgdpr.html
+++ b/aboutgdpr.html
@@ -77,7 +77,7 @@
             <div class="contact-text">
                 <span class="heading">Kontaktní údaje</span>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-md-6">
                         <p>
                             Blue Partners s.r.o.
                             <br>
@@ -88,7 +88,7 @@
                             IÈ: 27373622
                         </p>
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6">
                         <span><i class="fa fa-phone"></i>(+420) 725 949 433</span>
                         <br>
                         <span><i class="fa fa-envelope"></i>obchod@bluepartners.cz</span>
