added aboutgdpr and fixed aboutus

--- a/aboutgdpr.html
+++ b/aboutgdpr.html
@@ -17,7 +17,7 @@
     <!-- Material Design Lite -->
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     
-    <link rel="stylesheet" href="css/gdrp.css">
+    <link rel="stylesheet" href="css/gdpr.css">
 
     <title>[Web] EFFIT</title>
   </head>
@@ -51,48 +51,113 @@
       </nav>
     </header>
 
-    <section class="gdrp">
+    <section class="gdpr">
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <h1>O nás - tým Blue Partners stojící za systémem Effit</h1>
+                    <h1>Co je GDPR - jak se nás týká a jak se pøipravit?</h1>
                 </div>
                 <div class="col-md-4 note">
                     <div class="text">
-                        <span>Profesionálové</span>
-                        <p>s více než desetiletou<br>praxí v oblasti IT.</p>
+                        <span>25. 5. 2018</span>
+                        <p>GDPR vstoupí v úèinnost</p>
 
                         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-                            NAVŠTÍVIT WEB
+                            PORAÏTE SE S NÁMI
                         </button>
                     </div>
                 </div>
             </div>
-            <p class="subheading">Staráme se o bezpeènost informaèních systémù a jejich efektivní provoz. Máme 10+ let zkušeností s audity, strategickým rozvojem a podporou podnikových IT. Puste z hlavy poèítaèe, soustøeïte se na byznys!</p>
-            <p class="text">
-                Blue Partners jsme založili v roce 2005 se zámìrem nabídnout zákazníkùm IT služby jako ucelený soubor nástrojù, které jednoznaènì a mìøitelnì podpoøí jejich bezpeènost a rùst.
-                <br>
-                Provádíme audity a transformaci podnikových informaèních systémù a øízení celé IT infrastruktury malých i velkých firem a institucí. Vyvíjíme webové aplikace pro podporu procesù øízení. Nabízíme profesionální podporu øízení projektù tvorby a rozvoje informaèních technologií. Zajišujeme podporu manažerských rozhodnutí pøi plánování investic do technologií IT s doložením údaje a faktù.
+            <div class="subheading">
+                GDPR dopadne na vìtšinu právnických osob i OSVÈ, a zøejmì se tedy bude týkat také vás. Mávnout nad tím rukou nemùžete. Porušení principù GDPR vám mùže vynést postih až 20 miliónù eur nebo 4 % z celosvìtového obratu.
+            </div>
+            <br>
+            <p class="text1">
+                Další svévole bruselských byrokratù? Ne tak docela. GDPR nahradí tuzemský zákon è. 101/2000 Sb., o ochranì osobních údajù. Významnì ovšem rozšíøí definici osobních údajù a zpùsob nakládání s nimi. Komu není milé strkání cizích nosù do soukromých vìcí, mìl by jako obèan iniciativu EU pøivítat. V roli podnikatele asi budete projevovat menší nadšení.
             </p>
-            <div class="contact-text">
-                <span class="heading">Kontaktní údaje</span>
-                <div class="row">
-                    <div class="col-md-6">
-                        <p>
-                            Blue Partners s.r.o.
-                            <br>
-                            Sídlo: Kubánské nám. 1391/11, 100 00 Praha 10
-                            <br>
-                            Provozovna: Postupická 9, 140 00 Praha 4
-                            <br>
-                            IÈ: 27373622
-                        </p>
-                    </div>
-                    <div class="col-md-6">
-                        <span><i class="fa fa-phone"></i>(+420) 725 949 433</span>
-                        <br>
-                        <span><i class="fa fa-envelope"></i>obchod@bluepartners.cz</span>
-                    </div>
+            <p class="text2">
+                Osobním údajem jsou všechny informace, s jejichž pomocí dokážete identifikovat fyzickou osobu. Jde typicky o jméno, adresu, email, telefonní èíslo, rodné èíslo, adresu nebo zdravotní údaje. Zpracováním osobních dat je také shromažïování údajù o zamìstnancích nebo o zákaznících, napø. provozem systému vìrnostních karet.
+            </p>
+            <p class="text3">
+                Museli byste podnikat v hodnì šastném oboru, abyste se o GDPR nemuseli zajímat. Co všechno tedy po vás bude nová legislativa chtít?
+            </p>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="heading">
+                        Shromažïování údajù
+                    </span>
+                    <p>
+                        Budete muset vìdìt, jaké osobní údaje shromažïujete, jak je zpracováváte, a ovšem i kde pøesnì je máte.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <span class="heading">
+                        Souhlas a odvolání
+                    </span>
+                    <p>
+                        Odvolání souhlasu se zpracováním osobních údajù ze strany zákazníka bude muset být stejnì jednoduché jako pøedchozí souhlas.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <span class="heading">
+                        Skrytí identity
+                    </span>
+                    <p>
+                        Osobní údaje bude tøeba anonymizovat nebo pseudonymizovat.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="heading">
+                        Digitalizace
+                    </span>
+                    <p>
+                        Budou muset být pøenositelné v elektronické formì.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <span class="heading">
+                        Právo na sdìlení
+                    </span>
+                    <p>
+                        Zákazníci i zamìstnanci se budou moci dotazovat, jaké informace o nich shromažïujete, a vy jim to budete muset øíct.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <span class="heading">
+                        Dohled na procesy
+                    </span>
+                    <p>
+                        Budete povinni vyjít vstøíc novému právu obèana "na zapomenutí". Pokud ho zákazník uplatní, budete muset všechny údaje o nìm zlikvidovat (i proto bude dobré vìdìt, kde všude je máte).          
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="heading">
+                        Smazání identity
+                    </span>
+                    <p>
+                        GDPR bude vyžadovat posouzení vlivu zpracování údajù na jejich ochranu a vyhodnocení dopadù v pøípadì porušení ochrany
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <span class="heading">
+                        Odborník na údaje
+                    </span>
+                    <p>
+                        Nìkteré subjekty budou muset ustanovit tzv. povìøence pro ochranu osobních údajù a seznámit je s jejich povinnostmi.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <span class="heading">
+                        Nahlášení porušení
+                    </span>
+                    <p>
+                        Chtì nechtì povedete záznamy o prùbìhu zpracování. Budete muset hlásit úniky dat a jiná porušení jejich ochrany.
+                    </p>
                 </div>
             </div>
         </div>
@@ -129,4 +194,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
-</html
+</html>
