--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <div class="main-circle">
                         <span class="heading">Zdravotnictví</span>
                         <br>
-                        <span>Lorem ipsum</span>
+                        <span class="text">Lorem ipsum</span>
                     </div>
                     <div class="circle c1">
                     </div>
@@ -372,6 +372,43 @@
             $('html, body').animate({
                 scrollTop: $(".spectrum").offset().top
             }, 2000);
+        });
+
+        $(".spectrum .circle").click(function(){
+            $(".spectrum .circle ").removeClass("active");
+            $(this).addClass("active");
+
+            if($(this).attr("class").indexOf("c1") >= 0)
+            {
+                $(".main-circle .heading").text("Organizace");
+                $(".main-circle .text").text("Lorem ipsum");
+            } else if($(this).attr("class").indexOf("c2") >= 0)
+            {
+                $(".main-circle .heading").text("Správa");
+                $(".main-circle .text").text("Lorem ipsum");
+            } else if($(this).attr("class").indexOf("c3") >= 0)
+            {
+                $(".main-circle .heading").text("Úøady");
+                $(".main-circle .text").text("Lorem ipsum");
+            } else if($(this).attr("class").indexOf("c4") >= 0)
+            {
+                $(".main-circle .heading").text("Školství");
+                $(".main-circle .text").text("Lorem ipsum");
+            } else if($(this).attr("class").indexOf("c5") >= 0)
+            {
+                $(".main-circle .heading").text("Zdravotnictví");
+                $(".main-circle .text").text("Lorem ipsum");
+            } 
+        });
+
+        $(".functions .collapse-button").click(function() {
+            console.log("neco");
+            if($(this).text() == "keyboard_arrow_down")
+            {
+                $(this).text("keyboard_arrow_up");
+            } else {
+                $(this).text("keyboard_arrow_down");
+            }
         });
     </script>
   </body>
