Made grammar nazi files

--- a/aboutgdpr.html
+++ b/aboutgdpr.html
@@ -31,13 +31,13 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Sluzba Effit <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Služba Effit <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="aboutgdpr.html">Co je GDPR</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="aboutus.html">O nas</a>
+              <a class="nav-link" href="aboutus.html">O nás</a>
             </li>
           </ul>
           <ul class="navbar-nav">
@@ -55,40 +55,40 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <h1>Co je GDPR - jak se nás týká a jak se pøipravit?</h1>
+                    <h1>Co je GDPR - jak se nás týká a jak se připravit?</h1>
                 </div>
                 <div class="col-md-4 note">
                     <div class="text">
                         <span>25. 5. 2018</span>
-                        <p>GDPR vstoupí v úèinnost</p>
+                        <p>GDPR vstoupí v účinnost</p>
 
                         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-                            PORAÏTE SE S NÁMI
+                            PORAĎTE SE S NÁMI
                         </button>
                     </div>
                 </div>
             </div>
             <div class="subheading">
-                GDPR dopadne na vìtšinu právnických osob i OSVÈ, a zøejmì se tedy bude týkat také vás. Mávnout nad tím rukou nemùžete. Porušení principù GDPR vám mùže vynést postih až 20 miliónù eur nebo 4 % z celosvìtového obratu.
+                GDPR dopadne na většinu právnických osob i OSVČ, a zřejmě se tedy bude týkat také vás. Mávnout nad tím rukou nemůžete. Porušení principů GDPR vám může vynést postih až 20 miliónů eur nebo 4 % z celosvětového obratu.
             </div>
             <br>
             <p class="text1">
-                Další svévole bruselských byrokratù? Ne tak docela. GDPR nahradí tuzemský zákon è. 101/2000 Sb., o ochranì osobních údajù. Významnì ovšem rozšíøí definici osobních údajù a zpùsob nakládání s nimi. Komu není milé strkání cizích nosù do soukromých vìcí, mìl by jako obèan iniciativu EU pøivítat. V roli podnikatele asi budete projevovat menší nadšení.
+                Další svévole bruselských byrokratù? Ne tak docela. GDPR nahradí tuzemský zákon č. 101/2000 Sb., o ochraně osobních údajů. Významně ovšem rozšíří definici osobních údajů a způsob nakládání s nimi. Komu není milé strkání cizích nosů do soukromých věcí, měl by jako občan iniciativu EU přivítat. V roli podnikatele asi budete projevovat menší nadšení.
             </p>
             <p class="text2">
-                Osobním údajem jsou všechny informace, s jejichž pomocí dokážete identifikovat fyzickou osobu. Jde typicky o jméno, adresu, email, telefonní èíslo, rodné èíslo, adresu nebo zdravotní údaje. Zpracováním osobních dat je také shromažïování údajù o zamìstnancích nebo o zákaznících, napø. provozem systému vìrnostních karet.
+                Osobním údajem jsou všechny informace, s jejichž pomocí dokážete identifikovat fyzickou osobu. Jde typicky o jméno, adresu, email, telefonní číslo, rodné číslo, adresu nebo zdravotní údaje. Zpracováním osobních dat je také shromažďování údajů o zaměstnancích nebo o zákaznících, např. provozem systému věrnostních karet.
             </p>
             <p class="text3">
-                Museli byste podnikat v hodnì šastném oboru, abyste se o GDPR nemuseli zajímat. Co všechno tedy po vás bude nová legislativa chtít?
+                Museli byste podnikat v hodně šťastném oboru, abyste se o GDPR nemuseli zajímat. Co všechno tedy po vás bude nová legislativa chtít?
             </p>
 
             <div class="row">
                 <div class="col-md-4">
                     <span class="heading">
-                        Shromažïování údajù
+                        Shromažďování údajů
                     </span>
                     <p>
-                        Budete muset vìdìt, jaké osobní údaje shromažïujete, jak je zpracováváte, a ovšem i kde pøesnì je máte.
+                        Budete muset vědět, jaké osobní údaje shromažďujete, jak je zpracováváte, a ovšem i kde přesně je máte.
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -96,7 +96,7 @@
                         Souhlas a odvolání
                     </span>
                     <p>
-                        Odvolání souhlasu se zpracováním osobních údajù ze strany zákazníka bude muset být stejnì jednoduché jako pøedchozí souhlas.
+                        Odvolání souhlasu se zpracováním osobních údajů ze strany zákazníka bude muset být stejně jednoduché jako předchozí souhlas.
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -104,7 +104,7 @@
                         Skrytí identity
                     </span>
                     <p>
-                        Osobní údaje bude tøeba anonymizovat nebo pseudonymizovat.
+                        Osobní údaje bude třeba anonymizovat nebo pseudonymizovat.
                     </p>
                 </div>
             </div>
@@ -114,15 +114,15 @@
                         Digitalizace
                     </span>
                     <p>
-                        Budou muset být pøenositelné v elektronické formì.
+                        Budou muset být přenositelné v elektronické formě.
                     </p>
                 </div>
                 <div class="col-md-4">
                     <span class="heading">
-                        Právo na sdìlení
+                        Právo na sdělení
                     </span>
                     <p>
-                        Zákazníci i zamìstnanci se budou moci dotazovat, jaké informace o nich shromažïujete, a vy jim to budete muset øíct.
+                        Zákazníci i zaměstnanci se budou moci dotazovat, jaké informace o nich shromažďujete, a vy jim to budete muset říct.
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -130,7 +130,7 @@
                         Dohled na procesy
                     </span>
                     <p>
-                        Budete povinni vyjít vstøíc novému právu obèana "na zapomenutí". Pokud ho zákazník uplatní, budete muset všechny údaje o nìm zlikvidovat (i proto bude dobré vìdìt, kde všude je máte).          
+                        Budete povinni vyjít vstříc novému právu občana "na zapomenutí". Pokud ho zákazník uplatní, budete muset všechny údaje o něm zlikvidovat (i proto bude dobré vědět, kde všude je máte).          
                     </p>
                 </div>
             </div>
@@ -140,7 +140,7 @@
                         Smazání identity
                     </span>
                     <p>
-                        GDPR bude vyžadovat posouzení vlivu zpracování údajù na jejich ochranu a vyhodnocení dopadù v pøípadì porušení ochrany
+                        GDPR bude vyžadovat posouzení vlivu zpracování údajů na jejich ochranu a vyhodnocení dopadů v případě porušení ochrany
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -148,7 +148,7 @@
                         Odborník na údaje
                     </span>
                     <p>
-                        Nìkteré subjekty budou muset ustanovit tzv. povìøence pro ochranu osobních údajù a seznámit je s jejich povinnostmi.
+                        Některé subjekty budou muset ustanovit tzv. pověřence pro ochranu osobních údajů a seznámit je s jejich povinnostmi.
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -156,7 +156,7 @@
                         Nahlášení porušení
                     </span>
                     <p>
-                        Chtì nechtì povedete záznamy o prùbìhu zpracování. Budete muset hlásit úniky dat a jiná porušení jejich ochrany.
+                        Chtě nechtě povedete záznamy o průběhu zpracování. Budete muset hlásit úniky dat a jiná porušení jejich ochrany.
                     </p>
                 </div>
             </div>
