--- a/aboutus.html
+++ b/aboutus.html
@@ -31,13 +31,13 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Sluzba Effit <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Služba Effit <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="aboutgdpr.html">Co je GDPR</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="aboutus.html">O nas</a>
+              <a class="nav-link" href="aboutus.html">O nás</a>
             </li>
           </ul>
           <ul class="navbar-nav">
@@ -68,11 +68,11 @@
                     </div>
                 </div>
             </div>
-            <p class="subheading">Staráme se o bezpeènost informaèních systémù a jejich efektivní provoz. Máme 10+ let zkušeností s audity, strategickým rozvojem a podporou podnikových IT. Puste z hlavy poèítaèe, soustøeïte se na byznys!</p>
+            <p class="subheading">Staráme se o bezpečnost informačních systémů a jejich efektivní provoz. Máme 10+ let zkušeností s audity, strategickým rozvojem a podporou podnikových IT. Pusťte z hlavy počítače, soustřeďte se na byznys!</p>
             <p class="text">
-                Blue Partners jsme založili v roce 2005 se zámìrem nabídnout zákazníkùm IT služby jako ucelený soubor nástrojù, které jednoznaènì a mìøitelnì podpoøí jejich bezpeènost a rùst.
+                Blue Partners jsme založili v roce 2005 se záměrem nabídnout zákazníkům IT služby jako ucelený soubor nástrojů, které jednoznačně a měřitelně podpoří jejich bezpečnost a růst.
                 <br>
-                Provádíme audity a transformaci podnikových informaèních systémù a øízení celé IT infrastruktury malých i velkých firem a institucí. Vyvíjíme webové aplikace pro podporu procesù øízení. Nabízíme profesionální podporu øízení projektù tvorby a rozvoje informaèních technologií. Zajišujeme podporu manažerských rozhodnutí pøi plánování investic do technologií IT s doložením údaje a faktù.
+                Provádíme audity a transformaci podnikových informačních systémů a řízení celé IT infrastruktury malých i velkých firem a institucí. Vyvíjíme webové aplikace pro podporu procesů řízení. Nabízíme profesionální podporu řízení projektů tvorby a rozvoje informačních technologií. Zajišťujeme podporu manažerských rozhodnutí při plánování investic do technologií IT s doložením údaje a faktů.
             </p>
             <div class="contact-text">
                 <span class="heading">Kontaktní údaje</span>
@@ -85,7 +85,7 @@
                             <br>
                             Provozovna: Postupická 9, 140 00 Praha 4
                             <br>
-                            IÈ: 27373622
+                            IČ: 27373622
                         </p>
                     </div>
                     <div class="col-md-6">
