--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Sluzba Effit <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Služba Effit <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="aboutgdpr.html">Co je GDPR</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="aboutus.html">O nas</a>
+              <a class="nav-link" href="aboutus.html">O nás</a>
             </li>
           </ul>
           <ul class="navbar-nav">
@@ -53,7 +53,7 @@
 
     <section class="hero">
         <div class="container">
-            <h1>Effit - Moderni sluzba Evidence GDPR</h1>
+            <h1>Effit - Moderní služba Evidence GDPR</h1>
             <p>
                 Pomůže se zavedením a údržbou nařízení GDPR od začátku až dokonce. Obsahuje bázi typizovaných řešení pro Vás a metodiku ověřenou z desítek GDPR projektů. Seznamte se s ním níže!
             </p>
@@ -62,7 +62,7 @@
             </button>
             <br>
             <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--transparent">
-                Funkce Sluzby
+                Funkce Služby
             </button>
             
             <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored button-scroll">
@@ -105,7 +105,7 @@
                         <li>evidenci osobních údajů, systémů, úložišť a externích oraganizací</li>
                         <li>více jak 75 předpřipravených účelů rozdělených dle oblastí</li>
                         <li>rychlé filtrování a hledání dat</li>
-                        <li>rizikovou analýza a analýza DPIA</li>
+                        <li>rizikovou analýzu a analýzu DPIA</li>
                         <li>reporty</li>
                         <li>aktualizace funkcionalit a legislativy</li>
                     </ul>
@@ -137,7 +137,7 @@
                             <br>
                             Pro 3 uživatele systému.
                         </p>
-                        <p class="price-text">Cena Od</p>
+                        <p class="price-text">CENA OD</p>
                         <p class="product-price green">9 499 Kč <span class="with-dph">s DPH</span></p>
                         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--green">
                             <i class="fa fa-shopping-cart"></i> Zakoupit
@@ -154,7 +154,7 @@
                             <br>
                             Pro 10 uživatelů systému.
                         </p>
-                        <p class="price-text">Cena Od</p>
+                        <p class="price-text">CENA OD</p>
                         <p class="product-price blue">18 499 Kč <span class="with-dph">s DPH</span></p>
                         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--blue">
                             <i class="fa fa-shopping-cart"></i> Zakoupit
@@ -171,7 +171,7 @@
                             <br>
                             Pro neomezeně uživatelů systému.
                         </p>
-                        <p class="price-text">Cena Od</p>
+                        <p class="price-text">CENA OD</p>
                         <p class="product-price purple">37 499 Kč <span class="with-dph">s DPH</span></p>
                         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--purple">
                             <i class="fa fa-shopping-cart"></i> Zakoupit
