--- a/modal.html
+++ b/modal.html
@@ -36,15 +36,15 @@
     <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <h1>Ozvete se nam</h1>
+                <h1>Ozvěte se nám</h1>
                 <div class="form-group">
-                    <label for="name">Jmeno a Prijmeni</label>
+                    <label for="name">Jméno a Příjmení</label>
                     <input type="text" class="form-control">
     
-                    <label for="name">Jmeno a Prijmeni</label>
+                    <label for="name">Jméno a Příjmení</label>
                     <input type="text" class="form-control">
     
-                    <label for="name">Jmeno a Prijmeni</label>
+                    <label for="name">Jméno a Příjmení</label>
                     <input type="text" class="form-control">
 
                     <input type="checkbox">
